--- a/index.html
+++ b/index.html
@@ -461,8 +461,12 @@
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            <h4 class="title"><a href="">Compliance and Risk Management</a></h4>
+            <p class="description">Ensure compliance with industry standards and regulations (e.g., GDPR, ISO 27001).
+</p>
+<p class="description">Conduct risk assessments and develop risk management strategies.
+</p>
+
           </div>
         </div>
 
